<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting_toolbar_title"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/setting_ads_banner"
        app:layout_constraintTop_toBottomOf="@+id/setting_toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/setting_Profile_Image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginVertical="15dp"
                app:layout_constraintBottom_toTopOf="@id/setting_loginType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/setting_loginType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/outlined_box"
                android:padding="15dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/setting_Profile_Image"
                tools:text="Type : Google" />

            <TextView
                android:id="@+id/setting_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/outlined_box"
                android:padding="15dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/setting_loginType"
                tools:text="ID: google@gmail.com" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/setting_privacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/setting_button_terms"
                android:elevation="5dp"
                android:fontFamily="@font/inter"
                android:text="서비스 이용약관"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/setting_id" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/setting_terms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/setting_button_terms"
                android:elevation="5dp"
                android:fontFamily="@font/inter"
                android:text="개인정보 처리방침"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_privacy" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/setting_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/setting_button_logout"
                android:elevation="5dp"
                android:fontFamily="@font/inter"
                android:text="@string/setting_logout_button_text"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/setting_terms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/setting_withdrawal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/setting_button_withdrawal"
                android:elevation="5dp"
                android:fontFamily="@font/inter"
                android:text="@string/setting_withdrawal_button_text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_logout"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/setting_ads_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        ads:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>